--- a/Web Application for Analytics Data/Web Application for Analytics Data.csproj
+++ b/Web Application for Analytics Data/Web Application for Analytics Data.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Accord.MachineLearning" Version="3.8.0" />
       <PackageReference Include="CsvHelper" Version="33.0.1" />
       <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
     </ItemGroup>
