--- a/Web Application for Analytics Data/appsettings.json
+++ b/Web Application for Analytics Data/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "CsvFilePath": "/Users/dantealegria/Desktop/Code/Web Application for Analytics Data/Web Application for Analytics Data/UsageData.csv"
+  "CsvFilePath": "/home/dante/Code/web-analytics/Web Application for Analytics Data/UsageData.csv"
 }
