--- a/Web Application for Analytics Data/Web Application for Analytics Data.csproj
+++ b/Web Application for Analytics Data/Web Application for Analytics Data.csproj
@@ -20,4 +20,8 @@
       <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Clustering\Index.cshtml" />
+    </ItemGroup>
+
 </Project>
